在主界面添加TABBAR 实现了两个fragment之间的跳转动画 实现忘记密码的界面

--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
@@ -36,14 +42,14 @@
                 tools:layout="@layout/fragment_inputcell_simpletext" />
 
             <fragment
-                android:id="@+id/input_passoword_repeate"
+                android:id="@+id/input_password_repeat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 class="com.example.helloworld.fragments.inputcells.SimpleTextInputCellFragment"
                 tools:layout="@layout/fragment_inputcell_simpletext" />
 
             <fragment
-                android:id="@+id/picture"
+                android:id="@+id/input_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 class="com.example.helloworld.fragments.inputcells.PictureInputCellFragment"
@@ -53,7 +59,7 @@
                 android:id="@+id/btn_submit"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="注册" />
+                android:text="SUBMIT" />
         </LinearLayout>
     </ScrollView>
 
