--- a/res/layout/fragment_password_recover_step2.xml
+++ b/res/layout/fragment_password_recover_step2.xml
@@ -24,11 +24,18 @@
             class="com.example.helloworld.fragments.inputcells.SimpleTextInputCellFragment"
             tools:layout="@layout/fragment_inputcell_simpletext" />
 
+        <fragment
+            android:id="@+id/input_password_repeat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            class="com.example.helloworld.fragments.inputcells.SimpleTextInputCellFragment"
+            tools:layout="@layout/fragment_inputcell_simpletext" />
+
         <Button
-            android:id="@+id/btn_next"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_submit"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="下一步" />
+            android:text="提交" />
     </LinearLayout>
 
 </FrameLayout>
