--- a/res/layout/fragment_inputcell_picture.xml
+++ b/res/layout/fragment_inputcell_picture.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
+    android:layout_marginBottom="4dp"
+    android:layout_marginTop="4dp"
     android:orientation="vertical"
     android:padding="8dp" >
 
@@ -24,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="请选择图片"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:text="请选择图片" />
 
         <ImageView
             android:id="@+id/image"
