--- a/res/layout/fragment_password_recover_step1.xml
+++ b/res/layout/fragment_password_recover_step1.xml
@@ -19,7 +19,7 @@
 
         <Button
             android:id="@+id/btn_next"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="下一步" />
     </LinearLayout>
