--- a/res/layout/activity_helloworld.xml
+++ b/res/layout/activity_helloworld.xml
@@ -4,13 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center"
-        android:background="#ddf"
-        android:gravity="center"
-        android:text="HELLO WORLD" />
+    <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </FrameLayout>
 
     <fragment
         android:id="@+id/frag_tabbar"
