--- a/res/layout/activity_helloworld.xml
+++ b/res/layout/activity_helloworld.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent" >
 
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_weight="1"
+        android:layout_height="0dp" >
     </FrameLayout>
 
     <fragment
@@ -18,4 +20,4 @@
         class="com.example.helloworld.fragments.MainTabbarFragment"
         tools:layout="@layout/fragment_main_tabbar" />
 
-</FrameLayout>
+</LinearLayout>
