--- a/res/layout/activity_add_content.xml
+++ b/res/layout/activity_add_content.xml
@@ -4,11 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <EditText
+        android:id="@+id/input_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="添加新内容"
+        android:hint="请添加标题"
         android:textSize="18sp" />
 
     <View
@@ -17,6 +18,7 @@
         android:background="@android:color/darker_gray" />
 
     <EditText
+        android:id="@+id/input_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
