Feeds显示所有文章，并按照从新到旧的顺序排列。 文章有作者的名称头像和标题和部分内容

--- a/res/layout/fragment_page_feed_list.xml
+++ b/res/layout/fragment_page_feed_list.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Feeds"
+            android:text="文章列表"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
