加载更多与文章详情

--- a/res/layout/activity_feeds_content.xml
+++ b/res/layout/activity_feeds_content.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
 
     <com.example.helloworld.fragments.AvatarView
         android:id="@+id/avatar"
@@ -27,6 +28,23 @@
         android:layout_below="@id/tvTitle"
         android:layout_marginTop="10dp"
         android:text="2016-12-8 17:00" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/avatar"
+        android:gravity="center"
+        android:text="Title"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/articleText"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/title"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:id="@+id/tvAuthor"
