--- a/res/layout/activity_comment.xml
+++ b/res/layout/activity_comment.xml
@@ -7,13 +7,16 @@
     <ListView
         android:id="@+id/list_comment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_weight="0.9" >
     </ListView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        android:layout_weight="0.1"
+        >
 
         <EditText
             android:id="@+id/input_comment"
