--- a/res/layout/activity_feeds_content.xml
+++ b/res/layout/activity_feeds_content.xml
@@ -48,7 +48,7 @@
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:gravity="center"
             android:text="Title"
             android:textSize="18sp"
@@ -58,16 +58,16 @@
         <TextView
             android:id="@+id/articleText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="10dp"
-            android:layout_weight="0.92"
+            android:layout_weight="0.85"
             android:textSize="20sp" />
 
         <Button
             android:id="@+id/btn_comment"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.03"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
             android:layout_gravity="right"
             android:text="评论" />
     </LinearLayout>
