--- a/res/layout/fragment_page_my_profile.xml
+++ b/res/layout/fragment_page_my_profile.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <com.example.helloworld.fragments.AvatarView
+        android:id="@+id/avatar"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp" />
 
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:text="ME" />
 
     <ProgressBar
@@ -17,11 +26,21 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
-    <com.example.helloworld.fragments.AvatarView
-        android:id="@+id/avatar"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+    <Button
+        android:id="@+id/btn_update_pwd"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="80dp" />
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:text="修改密码" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_exit"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:text="退出" />
+
+</LinearLayout>
